added description and license info to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rust_learning_language"
 version = "0.1.0"
 edition = "2024"
+description = "Toy language interpreter as an exercise in development with Rust."
+license = "MIT"
 
 [dependencies]
 thiserror = "2.0.16"
